[gd_scene load_steps=5 format=3 uid="uid://d4nob737a2chy"]

[ext_resource type="Script" path="res://scripts/assets/objective.gd" id="1_i55ny"]

[sub_resource type="BoxShape3D" id="BoxShape3D_denne"]
size = Vector3(10, 10, 10)

[sub_resource type="TextMesh" id="TextMesh_lmtt0"]
text = "objective"
font_size = 97

[sub_resource type="BoxShape3D" id="BoxShape3D_tlk0q"]
size = Vector3(4, 1.15, 0.75)

[node name="Objective" type="Node3D" groups=["objective"]]
script = ExtResource("1_i55ny")

[node name="LevelStart" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelStart"]
shape = SubResource("BoxShape3D_denne")

[node name="ObjectiveItem" type="RigidBody3D" parent="." groups=["objective"]]

[node name="ObjectiveItem" type="MeshInstance3D" parent="ObjectiveItem"]
mesh = SubResource("TextMesh_lmtt0")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ObjectiveItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0149684, -0.010271, 0)
shape = SubResource("BoxShape3D_tlk0q")

[node name="OmniLight3D" type="OmniLight3D" parent="ObjectiveItem"]
light_color = Color(1, 1, 0, 1)

[connection signal="body_entered" from="LevelStart" to="." method="_on_level_start_body_entered"]
